03_OpenCV_TestAll/GP107/bioinspired.txt
Time compensation is 0
TEST: Skip tests with tags: 'mem_6gb', 'verylong'
CTEST_FULL_OUTPUT
OpenCV version: 4.1.1-pre
OpenCV VCS version: 4.1.0-431-gb58b2c5ae
Build type: RELEASE
WARNING: build value differs from runtime: Release
Compiler: /usr/bin/c++  (ver 7.4.0)
Parallel framework: pthreads
CPU features: SSE SSE2 SSE3 *SSE4.1 *SSE4.2 *FP16 *AVX *AVX2 *AVX512-SKX?
Intel(R) IPP version: ippIP AVX2 (l9) 2019.0.0 Gold (-) Jul 24 2018
OpenCL Platforms: 
    NVIDIA CUDA
        dGPU: GeForce GTX 1050 (OpenCL 1.2 CUDA)
    AMD Accelerated Parallel Processing
        iGPU: gfx902 (OpenCL 2.0 AMD-APP (2841.17))
Current OpenCL device: 
    Type = dGPU
    Name = GeForce GTX 1050
    Version = OpenCL 1.2 CUDA
    Driver version = 430.26
    Address bits = 64
    Compute units = 5
    Max work group size = 1024
    Local memory size = 48 KB
    Max memory allocation size = 500 MB 80 KB
    Double support = Yes
    Host unified memory = No
    Device extensions:
        cl_khr_global_int32_base_atomics
        cl_khr_global_int32_extended_atomics
        cl_khr_local_int32_base_atomics
        cl_khr_local_int32_extended_atomics
        cl_khr_fp64
        cl_khr_byte_addressable_store
        cl_khr_icd
        cl_khr_gl_sharing
        cl_nv_compiler_options
        cl_nv_device_attribute_query
        cl_nv_pragma_unroll
        cl_nv_copy_opts
        cl_nv_create_buffer
    Has AMD Blas = No
    Has AMD Fft = No
    Preferred vector width char = 1
    Preferred vector width short = 1
    Preferred vector width int = 1
    Preferred vector width long = 1
    Preferred vector width float = 1
    Preferred vector width double = 1
[==========] Running 8 tests from 1 test case.
[----------] Global test environment set-up.
[----------] 8 tests from OCL_RetinaFixture_Retina
[ RUN      ] OCL_RetinaFixture_Retina.Retina/0, where GetParam() = (false, 2, 1, 10)
OpenCL program build log: bioinspired/retina_kernel
Status -11: CL_BUILD_PROGRAM_FAILURE

<kernel>:299:9: error: call to 'fmax' is ambiguous
vstore4(fmax(magnoXonPixelResult, 0), 0, out_on);
        ^~~~
cl_kernel.h:3406:26: note: candidate function
float4  __OVERLOADABLE__ fmax(float4 x, float y)   ;
                         ^
cl_kernel.h:3421:25: note: candidate function
float4 __OVERLOADABLE__ fmax(float4, float4);
                        ^
<kernel>:301:9: error: call to 'fmax' is ambiguous
vstore4(fmax(magnoXoffPixelResult, 0), 0, out_off);
        ^~~~
cl_kernel.h:3406:26: note: candidate function
float4  __OVERLOADABLE__ fmax(float4 x, float y)   ;
                         ^
cl_kernel.h:3421:25: note: candidate function
float4 __OVERLOADABLE__ fmax(float4, float4);
                        ^

[ PERFSTAT ]    (samples=38   mean=20.10   median=19.97   min=19.83   stddev=0.44 (2.2%))
[       OK ] OCL_RetinaFixture_Retina.Retina/0 (999 ms)
[ RUN      ] OCL_RetinaFixture_Retina.Retina/1, where GetParam() = (false, 2, 1, 5)
[ PERFSTAT ]    (samples=13   mean=19.89   median=19.90   min=19.73   stddev=0.09 (0.4%))
[       OK ] OCL_RetinaFixture_Retina.Retina/1 (305 ms)
[ RUN      ] OCL_RetinaFixture_Retina.Retina/2, where GetParam() = (false, 2, 0.5, 10)
[ PERFSTAT ]    (samples=13   mean=19.98   median=19.89   min=19.80   stddev=0.31 (1.6%))
[       OK ] OCL_RetinaFixture_Retina.Retina/2 (308 ms)
[ RUN      ] OCL_RetinaFixture_Retina.Retina/3, where GetParam() = (false, 2, 0.5, 5)
[ PERFSTAT ]    (samples=13   mean=20.13   median=19.92   min=19.83   stddev=0.59 (2.9%))
[       OK ] OCL_RetinaFixture_Retina.Retina/3 (311 ms)
[ RUN      ] OCL_RetinaFixture_Retina.Retina/4, where GetParam() = (true, 2, 1, 10)
[ PERFSTAT ]    (samples=13   mean=56.94   median=56.95   min=55.54   stddev=0.72 (1.3%))
[       OK ] OCL_RetinaFixture_Retina.Retina/4 (807 ms)
[ RUN      ] OCL_RetinaFixture_Retina.Retina/5, where GetParam() = (true, 2, 1, 5)
[ PERFSTAT ]    (samples=10   mean=56.84   median=56.67   min=55.80   stddev=0.86 (1.5%))
[       OK ] OCL_RetinaFixture_Retina.Retina/5 (610 ms)
[ RUN      ] OCL_RetinaFixture_Retina.Retina/6, where GetParam() = (true, 2, 0.5, 10)
[ PERFSTAT ]    (samples=10   mean=56.89   median=56.93   min=56.12   stddev=0.76 (1.3%))
[       OK ] OCL_RetinaFixture_Retina.Retina/6 (616 ms)
[ RUN      ] OCL_RetinaFixture_Retina.Retina/7, where GetParam() = (true, 2, 0.5, 5)
[ PERFSTAT ]    (samples=10   mean=56.95   median=56.82   min=55.92   stddev=0.83 (1.5%))
[       OK ] OCL_RetinaFixture_Retina.Retina/7 (612 ms)
[----------] 8 tests from OCL_RetinaFixture_Retina (4569 ms total)

[----------] Global test environment tear-down
[==========] 8 tests from 1 test case ran. (4569 ms total)
[  PASSED  ] 8 tests.
